bugfix/bug-1
fixed issue with image not fitting properly on mobile

--- a/styles.css
+++ b/styles.css
@@ -83,6 +83,7 @@ p{
 /* gradient generator */
 #gradient-box{
     width:500px;
+    max-width:100%;
     height:300px;
     margin: auto;
     background-image: linear-gradient(rgb(185, 192, 236), rgb(180, 222, 236), rgb(231, 165, 203));
@@ -90,13 +91,16 @@ p{
 
 .button{
     font-family:'Space Mono';
-    margin-left: 45.2%;
     margin-top: 15px;
     
+}
+
+.centered-container
+{
+    text-align: center; /* Center horizontally */
 }
 
 .text{
     margin-top: 5px;
     font-size: 13px;
-
 }
